Add basic pickup and going to destination UI logic